; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kpi_socketfilter.c_sflt_entry_retain.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kpi_socketfilter.c_sflt_entry_retain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket_filter_entry = type { i32 }

@.str = private unnamed_addr constant [39 x i8] c"sflt_entry_retain - sfe_refcount <= 0\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.socket_filter_entry*)* @sflt_entry_retain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sflt_entry_retain(%struct.socket_filter_entry* %0) #0 {
  %2 = alloca %struct.socket_filter_entry*, align 8
  store %struct.socket_filter_entry* %0, %struct.socket_filter_entry** %2, align 8
  %3 = load %struct.socket_filter_entry*, %struct.socket_filter_entry** %2, align 8
  %4 = getelementptr inbounds %struct.socket_filter_entry, %struct.socket_filter_entry* %3, i32 0, i32 0
  %5 = call i64 @OSIncrementAtomic(i32* %4)
  %6 = icmp sle i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 @panic(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %1
  ret void
}

declare dso_local i64 @OSIncrementAtomic(i32*) #1

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
